--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <title>sideMランダム選曲ジェネレーター</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/script.js"></script>
 
     <!-- twitterの設定 -->
     <meta name="twitter:card" content="summary" />
@@ -18,8 +19,11 @@
     <meta property="og:description" content="sideM曲をランダムで選曲してくれるジェネレーターです。JOYとDAM別になっています。" />
     <meta property="og:image" content="http://tsukiyoni.oteage.net/images/ogp.jpg" />
 </head>
+
 <body>
-    <!--shinobi1--><script type="text/javascript" src="//xa.shinobi.jp/ufo/186490600"></script><noscript><a href="//xa.shinobi.jp/bin/gg?186490600" target="_blank"><img src="//xa.shinobi.jp/bin/ll?186490600" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->
+    <!--shinobi1-->
+    <script type="text/javascript" src="//xa.shinobi.jp/ufo/186490600"></script><noscript><a href="//xa.shinobi.jp/bin/gg?186490600" target="_blank"><img src="//xa.shinobi.jp/bin/ll?186490600" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript>
+    <!--shinobi2-->
     <header>
         <h1>sideMランダム選曲ジェネレーター</h1>
     </header>
@@ -70,9 +74,8 @@
                 <h3>＜使い方＞</h3>
                 <ol class="box-process">
                     <li>
-                        機種を選ぶ。<br>
-                        ※結果表示で曲名も合わせて表示したい時には<br>
-                        「曲名を表示する」にチェックを入れてください。
+                        機種を選ぶ。<br> ※結果表示で曲名も合わせて表示したい時には
+                        <br> 「曲名を表示する」にチェックを入れてください。
                     </li>
                     <li>
                         曲番号が表示されるので、お使いのデンモクなどで入力してください。
@@ -87,12 +90,11 @@
                 <hr>
                 <h3>＜注意事項など＞</h3>
                 <p>
-                    ※手動で追加しているため、曲の漏れや番号間違いなどあるかと思います。<br>
-                    ※ページを更新すると強制的にリセットがかかります。仕様です…すいません…。<br>
-                    ※更新が入った後は一度キャッシュ削除していただくといい感じに動くかと。<br>
-                    ※そのほか誤字脱字、不具合などが発生する場合もあります。<br>
-                    ※個人で修正改善などを行なっているため、更新遅くなる可能性が高いです。<br>
-                    ※悪用出来ないとは思いますが、個人でいい感じに遊ぶ程度にご利用ください。
+                    ※手動で追加しているため、曲の漏れや番号間違いなどあるかと思います。<br> ※ページを更新すると強制的にリセットがかかります。仕様です…すいません…。
+                    <br> ※更新が入った後は一度キャッシュ削除していただくといい感じに動くかと。
+                    <br> ※そのほか誤字脱字、不具合などが発生する場合もあります。
+                    <br> ※個人で修正改善などを行なっているため、更新遅くなる可能性が高いです。
+                    <br> ※悪用出来ないとは思いますが、個人でいい感じに遊ぶ程度にご利用ください。
                 </p>
                 <p>
                     不具合、要望、質問などありましたら以下のお題箱で教えていただけると幸いです。<br>
@@ -109,44 +111,39 @@
                     <li class="js-load">
                         <p class="tx-date">2020.7.1</p>
                         <p class="tx-description">
-                            WT曲の残り、5thアニバの一部など諸々追加しました。<br>
-                            更新遅れてすみません…！<br>
-                            大変なご時世ですがまたカラオケに行けるようになったときにどうぞ。
+                            WT曲の残り、5thアニバの一部など諸々追加しました。<br> 更新遅れてすみません…！
+                            <br> 大変なご時世ですがまたカラオケに行けるようになったときにどうぞ。
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2019.12.9</p>
                         <p class="tx-description">
-                            4周年曲、WTタイ/インド曲、ベスゲ2曲など諸々追加しました。<br>
-                            後ろの動作部分に手を加えたので、不具合あれば<a href="https://odaibako.net/u/atm4472" target="_blank">こちら</a>にお願いいたします。
+                            4周年曲、WTタイ/インド曲、ベスゲ2曲など諸々追加しました。<br> 後ろの動作部分に手を加えたので、不具合あれば
+                            <a href="https://odaibako.net/u/atm4472" target="_blank">こちら</a>にお願いいたします。
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2019.8.26</p>
                         <p class="tx-description">
-                            WTカナダ,ロシア曲を追加しました。<br>
-                            5周年おめでとうございます！
+                            WTカナダ,ロシア曲を追加しました。<br> 5周年おめでとうございます！
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2019.5.20</p>
                         <p class="tx-description">
-                            WTフィンランド曲を追加しました。<br>
-                            4thお疲れ様でした！
+                            WTフィンランド曲を追加しました。<br> 4thお疲れ様でした！
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2019.3.7</p>
                         <p class="tx-description">
-                            WTドイツ曲、その他後続追加曲を追加しました。<br>
-                            もうすぐプロミですね！
+                            WTドイツ曲、その他後続追加曲を追加しました。<br> もうすぐプロミですね！
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2019.1.15</p>
                         <p class="tx-description">
-                            WTハワイ曲、理由mini曲、その他を追加しました。<br>
-                            あけましておめでとうございます。
+                            WTハワイ曲、理由mini曲、その他を追加しました。<br> あけましておめでとうございます。
                         </p>
                     </li>
                     <li class="js-load">
@@ -170,22 +167,19 @@
                     <li class="js-load">
                         <p class="tx-date">2018.7.17</p>
                         <p class="tx-description">
-                            残り曲数を出すようにしました。折り返しとかわかりやすいですもんね。<br>
-                            4周年、おめでとうございます。
+                            残り曲数を出すようにしました。折り返しとかわかりやすいですもんね。<br> 4周年、おめでとうございます。
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2018.7.11</p>
                         <p class="tx-description">
-                            いくつかの楽曲の曲番号や曲名が違っていたようです…すいません…。<br>
-                            一旦JOYSOUNDの曲情報を修正しました。DAMは確認中です。
+                            いくつかの楽曲の曲番号や曲名が違っていたようです…すいません…。<br> 一旦JOYSOUNDの曲情報を修正しました。DAMは確認中です。
                         </p>
                     </li>
                     <li class="js-load">
                         <p class="tx-date">2018.7.3</p>
                         <p class="tx-description">
-                            リセットをかける、もしくは全曲入れ終わるまで同じ曲が出ないようにしました。<br>
-                            多分出ません。おそらく。
+                            リセットをかける、もしくは全曲入れ終わるまで同じ曲が出ないようにしました。<br> 多分出ません。おそらく。
                         </p>
                     </li>
                     <li class="js-load">
@@ -198,8 +192,8 @@
                     <li class="js-load">
                         <p class="tx-date">2018.6.8</p>
                         <p class="tx-description">
-                            JOYSOUND配信曲を追加しました。<br>
-                            あとテンションが上がったのでDAMも追加しました。<br>
+                            JOYSOUND配信曲を追加しました。<br> あとテンションが上がったのでDAMも追加しました。
+                            <br>
                             <span class="tx-attention">結果ツイートボタンもサイレント実装しました</span>
                         </p>
                     </li>
@@ -214,12 +208,12 @@
 
         <div class="box-share">
             <a class="sns-twitter sns-link" href="https://twitter.com/intent/tweet?url=http://tsukiyoni.oteage.net/&text=sideMランダム選曲ジェネレーター&hashtags=sideMランダム選曲ジェネレーター" target="_blank">
-                <img src="images/icon_twitter.png" alt="tweet">
+                <img src="./images/icon_twitter.png" alt="tweet">
                 <span class="sns-txt">twitterでシェアする</span>
             </a>
         </div>
         <div class="box-material">
-            <a href="material/">おまけ</a>
+            <a href="./material/">おまけ</a>
             <p>おまけです。個人的に作ってるデータ資料をまとめました。</p>
         </div>
     </div>
@@ -229,7 +223,8 @@
     </div>
 
     <footer>
-        作った人：ユキチ</p>
+        作った人：米崎</p>
     </footer>
 </body>
+
 </html>
