--- a/material/index.html
+++ b/material/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -18,8 +19,12 @@
     <meta property="og:description" content="sideM曲をランダムで選曲してくれるジェネレーター、のおまけページです。キャラデータやイベントデータが載ってます。" />
     <meta property="og:image" content="http://tsukiyoni.oteage.net/images/ogp.jpg" />
 </head>
+
 <body>
-<!--shinobi1--><script type="text/javascript" src="//xa.shinobi.jp/ufo/186490601"></script><noscript><a href="//xa.shinobi.jp/bin/gg?186490601" target="_blank"><img src="//xa.shinobi.jp/bin/ll?186490601" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->    <header>
+    <!--shinobi1-->
+    <script type="text/javascript" src="//xa.shinobi.jp/ufo/186490601"></script><noscript><a href="//xa.shinobi.jp/bin/gg?186490601" target="_blank"><img src="//xa.shinobi.jp/bin/ll?186490601" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript>
+    <!--shinobi2-->
+    <header>
         <h1>おまけ</h1>
     </header>
 
@@ -28,9 +33,8 @@
             <h2 class="main-innner-ttl">概要</h2>
             <div class="wrap-box">
                 <p>
-                    個人的にまとめたデータなどを載せてます。<br>
-                    ジェネレータ同様、手動で入力しています。<br>
-                    そのため、誤字脱字その他ミスなどある可能性がありますので、その辺は自己責任でよろしくお願いいたします。
+                    個人的にまとめたデータなどを載せてます。<br> ジェネレータ同様、手動で入力しています。
+                    <br> そのため、誤字脱字その他ミスなどある可能性がありますので、その辺は自己責任でよろしくお願いいたします。
                 </p>
             </div>
         </div>
@@ -85,7 +89,7 @@
                 </div>
             </div>
         </div>
-        
+
 
         <!-- 更新履歴 -->
         <div class="box-news main-innner">
@@ -95,19 +99,19 @@
                     <li>
                         <p class="tx-date">2018.8.17</p>
                         <p class="tx-description">
-                            ページ作成。<br>
-                            以下のデータを追加しました。<br>
-                            ・パーソナルデータ<br>
-                            ・呼称表<br>
-                            ・エムステのイベント関連<br>
-                            ・ワートレ関連<br>
+                            ページ作成。<br> 以下のデータを追加しました。
+                            <br> ・パーソナルデータ
+                            <br> ・呼称表
+                            <br> ・エムステのイベント関連
+                            <br> ・ワートレ関連
+                            <br>
                         </p>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    
+
     <div class="box-back">
         <a href="../">ジェネレータに戻る</a>
     </div>
@@ -116,4 +120,5 @@
         作った人：ユキチ(@atm4472)</p>
     </footer>
 </body>
+
 </html>
