またパス間違えてる…

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </a>
         </div>
         <div class="box-material">
-            <a href="./material/">おまけ</a>
+            <a href="/material/">おまけ</a>
             <p>おまけです。個人的に作ってるデータ資料をまとめました。</p>
         </div>
     </div>
