--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>sideMランダム選曲ジェネレーター</title>
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/script.js"></script>
 
@@ -213,7 +213,7 @@
             </a>
         </div>
         <div class="box-material">
-            <a href="/material/">おまけ</a>
+            <a href="/random-music/material/">おまけ</a>
             <p>おまけです。個人的に作ってるデータ資料をまとめました。</p>
         </div>
     </div>
