--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <!-- twitterの設定 -->
     <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="http://tsukiyoni.oteage.net/" />
+    <meta property="og:url" content="https://okome-on-fire.github.io/random-music/" />
     <meta property="og:title" content="sideMランダム選曲ジェネレーター" />
     <meta property="og:description" content="sideM曲をランダムで選曲してくれるジェネレーターです。JOYとDAM別になっています。" />
-    <meta property="og:image" content="http://tsukiyoni.oteage.net/images/ogp.jpg" />
+    <meta property="og:image" content="./images/ogp.jpg" />
 </head>
 
 <body>
@@ -61,7 +61,7 @@
                 <p class="tx-model">選んだ機種：<span class="tx-model-result">＊＊＊</span></p>
                 <p class="tx-title">曲名：<span class="tx-title-result">〇〇〇〇</span></p>
                 <p class="tx-number">曲番号：<span class="tx-number-result">000000000</span></p>
-                <a class="btn-share-twitter" href="http://twitter.com/intent/tweet?url=http://tsukiyoni.oteage.net/&text=みわわ〜ん" target="_blank">結果をツイートする</a>
+                <a class="btn-share-twitter" href="http://twitter.com/intent/tweet?url=https://okome-on-fire.github.io/random-music/&text=みわわ〜ん" target="_blank">結果をツイートする</a>
             </div>
         </div>
 
@@ -207,7 +207,7 @@
         </div>
 
         <div class="box-share">
-            <a class="sns-twitter sns-link" href="https://twitter.com/intent/tweet?url=http://tsukiyoni.oteage.net/&text=sideMランダム選曲ジェネレーター&hashtags=sideMランダム選曲ジェネレーター" target="_blank">
+            <a class="sns-twitter sns-link" href="https://twitter.com/intent/tweet?url=https://okome-on-fire.github.io/random-music//&text=sideMランダム選曲ジェネレーター&hashtags=sideMランダム選曲ジェネレーター" target="_blank">
                 <img src="./images/icon_twitter.png" alt="tweet">
                 <span class="sns-txt">twitterでシェアする</span>
             </a>
