--- a/material/index.html
+++ b/material/index.html
@@ -8,16 +8,16 @@
     <title>おまけ</title>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/material.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/material.js"></script>
 
     <!-- twitterの設定 -->
     <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="http://tsukiyoni.oteage.net/" />
+    <meta property="og:url" content="https://okome-on-fire.github.io/random-music/" />
     <meta property="og:title" content="sideMランダム選曲ジェネレーター：おまけ" />
     <meta property="og:description" content="sideM曲をランダムで選曲してくれるジェネレーター、のおまけページです。キャラデータやイベントデータが載ってます。" />
-    <meta property="og:image" content="http://tsukiyoni.oteage.net/images/ogp.jpg" />
+    <meta property="og:image" content="./images/ogp.jpg" />
 </head>
 
 <body>
@@ -75,27 +75,19 @@
                 <iframe height="500" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSQaVe5ndQxxu3cpUj06hvuqLiVzoGSFUyaL5EGVmUdmBUSICqbcRUer87YKyl7hRiSwbnzzLPEVLo3/pubhtml?gid=1595657195&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
             </div>
         </div>
-        <div id="wt" class="box-wt main-innner js-toggle">
-            <h2 class="main-innner-ttl">ワートレ関連</h2>
-            <div class="wrap-box">
-                <div class="box-unit">
-                    <p>ユニットごとの入手方法まとめがこちら</p>
-                    <iframe height="500" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSQaVe5ndQxxu3cpUj06hvuqLiVzoGSFUyaL5EGVmUdmBUSICqbcRUer87YKyl7hRiSwbnzzLPEVLo3/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-                </div>
-                <div class="box-border">
-                    <p>国ごとの開催時期、最終ボーダーなどのまとめがこちら。</p>
-                    <iframe height="300" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSQaVe5ndQxxu3cpUj06hvuqLiVzoGSFUyaL5EGVmUdmBUSICqbcRUer87YKyl7hRiSwbnzzLPEVLo3/pubhtml?gid=236152940&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-                    <iframe height="400" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSQaVe5ndQxxu3cpUj06hvuqLiVzoGSFUyaL5EGVmUdmBUSICqbcRUer87YKyl7hRiSwbnzzLPEVLo3/pubchart?oid=1126763715&amp;format=interactive"></iframe>
-                </div>
-            </div>
-        </div>
-
 
         <!-- 更新履歴 -->
         <div class="box-news main-innner">
             <h2 class="main-innner-ttl">更新履歴</h2>
             <div class="wrap-box">
                 <ul>
+                    <li>
+                        <p class="tx-date">2020.8.19</p>
+                        <p class="tx-description">
+                            ページ作成。<br> 以下のデータを削除しました。
+                            <br> ・ワートレ関連
+                        </p>
+                    </li>
                     <li>
                         <p class="tx-date">2018.8.17</p>
                         <p class="tx-description">
@@ -117,7 +109,7 @@
     </div>
 
     <footer>
-        作った人：ユキチ(@atm4472)</p>
+        作った人：米崎</p>
     </footer>
 </body>
 
