そろそろちゃんとURL設定してください

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
 
         <div class="box-share">
-            <a class="sns-twitter sns-link" href="https://twitter.com/intent/tweet?url=https://okome-on-fire.github.io/random-music//&text=sideMランダム選曲ジェネレーター&hashtags=sideMランダム選曲ジェネレーター" target="_blank">
+            <a class="sns-twitter sns-link" href="https://twitter.com/intent/tweet?url=https://okome-on-fire.github.io/random-music/&text=sideMランダム選曲ジェネレーター&hashtags=sideMランダム選曲ジェネレーター" target="_blank">
                 <img src="./images/icon_twitter.png" alt="tweet">
                 <span class="sns-txt">twitterでシェアする</span>
             </a>
