お題箱のURL変更

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </p>
                 <p>
                     不具合、要望、質問などありましたら以下のお題箱で教えていただけると幸いです。<br>
-                    <a href="https://odaibako.net/u/atm4472" target="_blank">https://odaibako.net/u/atm4472</a>
+                    <a href="https://odaibako.net/u/oteage" target="_blank">https://odaibako.net/u/oteage</a>
                 </p>
             </div>
         </div>
@@ -119,7 +119,7 @@
                         <p class="tx-date">2019.12.9</p>
                         <p class="tx-description">
                             4周年曲、WTタイ/インド曲、ベスゲ2曲など諸々追加しました。<br> 後ろの動作部分に手を加えたので、不具合あれば
-                            <a href="https://odaibako.net/u/atm4472" target="_blank">こちら</a>にお願いいたします。
+                            <a href="https://odaibako.net/u/oteage" target="_blank">こちら</a>にお願いいたします。
                         </p>
                     </li>
                     <li class="js-load">
