お知らせ追加

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
             <div class="wrap-box">
                 <ul>
                     <li class="js-load">
+                        <p class="tx-date">20201.8.15</p>
+                        <p class="tx-description">
+                            諸事情で更新が遅れています…すみません…！<br>更新希望の方は気長にお待ちいただけると助かります…。
+                        </p>
+                    </li>
+                    <li class="js-load">
                         <p class="tx-date">2020.7.1</p>
                         <p class="tx-description">
                             WT曲の残り、5thアニバの一部など諸々追加しました。<br> 更新遅れてすみません…！
